@@ -3,6 +3,11 @@
 @section v2_04_dev Changes with libapreq2-2.04-dev
 
 
+- Perl API [joes]
+  Separate Apache::Upload module from Apache::Request for 
+  better organization.
+
+
 @section v2_03_dev Changes with libapreq2-2.03-dev (released June 12, 2004)
 
 - C API [joes]
